Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <ul id="nav-menu">
             <li><a href="index_articulo1.html" class="active">Introducción</a></li>
             <li><a href="historia_articulo2.html">Historia</a></li>
-            <li><a href="juego.html">Juego</a></li>
+            <li><a href="juego/juego.html">Juego</a></li>
             <li><a href="caracteristicas_articulo3.html">Características Clave</a></li>
             <li><a href="imagenes_articulo4.html">Imágenes</a></li>
             <li><a href="tablas_articulo5.html">Tablas</a></li>
@@ -251,3 +251,4 @@
 </body>
 
 </html>
+
