--- a/juego/juego.html
+++ b/juego/juego.html
@@ -10,7 +10,7 @@
     html, body {
       height: 100%;              /* Ocupa toda la altura de la ventana */
       margin: 0;                 /* Elimina márgenes por defecto */
-      background: #70c5ce;       /* Color azul cielo de fondo */
+      background: #000000;       /* Color de fondo */
       display: flex;             /* Flexbox para centrar contenido */
       justify-content: center;   /* Centrado horizontal */
       align-items: center;       /* Centrado vertical */
@@ -273,3 +273,4 @@
 </body>
 
 </html>
+
