--- a/juego/juego.html
+++ b/juego/juego.html
@@ -165,7 +165,7 @@
     spawnPipes() {
       if (!this.isAlive) return; // No generar si el juego terminó
 
-      const gap = 160; // Espacio entre los tubos
+      const gap = 220; // Espacio entre los tubos (más grande para mayor facilidad)
       const topMin = 80; // Altura mínima del tubo superior
       const bottomMin = 80; // Altura mínima del inferior
       const maxTop = HEIGHT - gap - bottomMin - 64; // Límite superior del hueco
@@ -273,5 +273,3 @@
 </body>
 
 </html>
-
-
