--- a/juego/juego.html
+++ b/juego/juego.html
@@ -113,7 +113,7 @@
 
       /* --- Temporizador para generar tubos continuamente --- */
       this.pipeTimer = this.time.addEvent({
-        delay: 1300,            // Cada 1.3 segundos
+        delay: 1800,            // Cada 1.8 segundos (más separación horizontal)
         callback: this.spawnPipes,  // Función que genera tubos
         callbackScope: this,
         loop: true               // Se repite indefinidamente
