--- a/juego/juego.html
+++ b/juego/juego.html
@@ -126,6 +126,12 @@
       /* --- Estado inicial del juego --- */
       this.isAlive = true; // Controla si el jugador sigue vivo
 
+      // Contador de tubos superados
+      this.score = 0;
+      this.scoreText = this.add.text(WIDTH / 2, 40, 'Puntaje: 0', {
+        font: '28px Arial', fill: '#fff', stroke: '#000', strokeThickness: 4
+      }).setOrigin(0.5);
+
       /* --- Texto inicial --- */
       this.instruction = this.add.text(WIDTH / 2, HEIGHT / 2 - 40, 'Toca o presiona ESPACIO para volar', {
         font: '18px Arial', fill: '#fff'
@@ -210,6 +216,18 @@
       if (this.bird.y < -50) {
         this.onGameOver();
       }
+
+      // Contador de tubos superados
+      this.pipes.getChildren().forEach(pipe => {
+        if (!pipe.counted && pipe.x + pipe.displayWidth / 2 < this.bird.x - this.bird.displayWidth / 2) {
+          pipe.counted = true;
+          // Solo contar el tubo inferior para evitar doble conteo por par
+          if (!pipe.flipY) {
+            this.score++;
+            this.scoreText.setText('Puntaje: ' + this.score);
+          }
+        }
+      });
     }
 
     /* --- Fin del juego --- */
@@ -233,6 +251,9 @@
       this.add.text(WIDTH / 2, HEIGHT / 2 + 30, 'Toca para reiniciar', {
         font: '18px Arial', fill: '#fff'
       }).setOrigin(0.5);
+
+      // Oculta el puntaje final
+      this.scoreText.setVisible(false);
 
       // Hace que el pájaro caiga y se incline hacia abajo
       this.bird.setVelocityY(250); // Empuja hacia abajo
@@ -273,4 +294,3 @@
 </body>
 
 </html>
-
