--- a/juego/juego.html
+++ b/juego/juego.html
@@ -18,27 +18,28 @@
 
     /* Contenedor principal del juego */
     #gameContainer {
-      width: 100vw;              /* Ocupa todo el ancho de la ventana */
-      height: 100vh;             /* Ocupa todo el alto de la ventana */
-      max-width: 964px;          /* Máximo ancho para desktop */
-      max-height: 544px;         /* Máximo alto para desktop */
-      border: 3px solid #fff;    /* Borde blanco */
-      border-radius: 12px;       /* Bordes redondeados */
-      box-shadow: 0 0 30px rgba(0,0,0,0.4); /* Sombra para efecto visual */
-      overflow: hidden;          /* Oculta cualquier desbordamiento */
-      position: relative;
-      margin: 0 auto;
+      width: 100vw;
+      height: 100vh;
+      border: 3px solid #fff;
+      border-radius: 12px;
+      box-shadow: 0 0 30px rgba(0,0,0,0.4);
+      overflow: hidden;
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      margin: 0;
       display: flex;
       justify-content: center;
       align-items: center;
+      max-width: none;
+      max-height: none;
     }
 
     /* Configuración para que los píxeles del canvas se vean nítidos */
     canvas {
-      image-rendering: pixelated; /* Evita suavizado de imágenes */
-      display: block;             /* Elimina espacios extra */
-      width: 100% !important;
-      height: 100% !important;
+      image-rendering: pixelated;
+      display: block;
+      width: 100vw !important;
+      height: 100vh !important;
       max-width: 100vw;
       max-height: 100vh;
     }
@@ -55,8 +56,8 @@
   /* ===========================================
      CONFIGURACIÓN BÁSICA DEL JUEGO
   ============================================ */
-  const WIDTH = 964;   // Ancho del área de juego
-  const HEIGHT = 544;  // Alto del área de juego
+  const WIDTH = window.innerWidth;
+  const HEIGHT = window.innerHeight;
 
   /* ===========================================
      ESCENA PRINCIPAL DEL JUEGO
@@ -301,6 +302,11 @@
 
   /* --- Inicia el juego con la configuración anterior --- */
   const game = new Phaser.Game(config);
+
+  // Agrega un event listener para reajustar el juego al cambiar el tamaño de la ventana
+  window.addEventListener('resize', () => {
+    game.scale.resize(window.innerWidth, window.innerHeight);
+  });
   </script>
 </body>
 
