Disable debug mode in game configuration
Updated the game configuration to disable debug mode.

--- a/juego/juego.html
+++ b/juego/juego.html
@@ -290,7 +290,7 @@
     // Configuración de físicas
     physics: { 
       default: 'arcade', // Motor de físicas Arcade (simple y rápido)
-      arcade: { debug: true } // Debug desactivado (no muestra colisiones en pantalla)
+      arcade: { debug: false } // Debug desactivado (no muestra colisiones en pantalla)
     }, 
     
     scene: [MainScene], // Escena principal que se ejecutará
@@ -311,5 +311,6 @@
 </body>
 
 </html>
+
 
 
