Fix HTML encoding issues in juego.html

--- a/juego/juego.html
+++ b/juego/juego.html
@@ -290,7 +290,7 @@
     // Configuración de físicas
     physics: { 
       default: 'arcade', // Motor de físicas Arcade (simple y rápido)
-      arcade: { debug: false } // Debug desactivado (no muestra colisiones en pantalla)
+      arcade: { debug: true} // Debug desactivado (no muestra colisiones en pantalla)
     }, 
     
     scene: [MainScene], // Escena principal que se ejecutará
@@ -311,6 +311,7 @@
 </body>
 
 </html>
+
 
 
 
